HDPI-1932: Adding persistence of additional reasons + refactoring